add history order item list

--- a/src/app/page/history-order/history-order.component.html
+++ b/src/app/page/history-order/history-order.component.html
@@ -1,3 +1,13 @@
 <div class="container">
   <h1>Historia Zamówień</h1>
+
+  <div class="box">
+
+    <app-hist-order-item></app-hist-order-item>
+    <app-hist-order-item></app-hist-order-item>
+    <app-hist-order-item></app-hist-order-item>
+    <app-hist-order-item></app-hist-order-item>
+
+  </div>
+
 </div>
