Add example object and statement to payment

--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -8,7 +8,7 @@
 
       <a routerLink="/menu" routerLinkActive="active">Menu</a>
 
-      <a routerLink="/payments" routerLinkActive="active">Płatności</a>
+<!--      <a routerLink="/payments" routerLinkActive="active">Płatności</a>-->
 
       <a routerLink="/logout">Wyloguj</a>
 
