--- a/src/app/component/hist-order-item/hist-order-item.component.scss
+++ b/src/app/component/hist-order-item/hist-order-item.component.scss
@@ -7,9 +7,18 @@
   padding: 0 10px;
   background-color: #f4f4f8;
   margin-top: 15px;
+  cursor: default;
 }
 
 .item p {
   margin-bottom: 0;
   width: 100%;
+}
+
+.no-pay {
+  background-color: #ff724c;
+}
+
+.pay {
+  background-color: #35d04f;
 }
